Dashboard: Store machine list permanently.
* The list is managed by cockpitd.
* There is a dedicated websocket to access it.
* The dashboard monitors this connection.
* If the connection is down, machine additions are stored locally in
  the browser, and written out when the connection comes back.

--- a/src/daemon/Makefile-daemon.am
+++ b/src/daemon/Makefile-daemon.am
@@ -11,6 +11,10 @@ cockpitd_SOURCES = \
 	src/daemon/utils.c \
 	src/daemon/manager.h \
 	src/daemon/manager.c \
+	src/daemon/machines.h \
+	src/daemon/machines.c \
+	src/daemon/machine.h \
+	src/daemon/machine.c \
 	src/daemon/network.h \
 	src/daemon/network.c \
 	src/daemon/netinterface.h \
